[package]
name = "stripack"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ChosunOne/stripack"
keywords = ["triangle", "mesh", "delaunay", "sphere", "voronoi"]
categories = ["algorithms", "mathematics", "science", "data-structures"]
documentation = "https://docs.rs/stripack"
description = "Safe wrapper for STRIPACK for Delaunay triangulation on the unit sphere"
rust-version = "1.93.1"

[dependencies]
stripack-sys = "^0.1.1"
thiserror = "^2.0.18"

[dev-dependencies]
proptest = {version = "^1.10.0", features = ["std"]}
test-strategy = "^0.4.4"
